<resources>
    <string name="app_name">WorkingSpot</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="user_mail">Mail: nome.cognome@gmail.com</string>
    <string name="user_password">Password: ********</string>
    <string name="changeEmail">Change e-mail</string>
    <string name="changePassword">Change password</string>
    <string name="links">Your links</string>
    <string name="linkGoogle">Link your google</string>
    <string name="linkLinkedIn">Link your linkedIn</string>
    <string name="choosePalette">Choose your color palette</string>
    <string name="palette_1">Palette 1</string>
    <string name="palette_2">Palette 2</string>
    <string name="palette_3">Palette 3</string>
    <string name="palette_4">Palette 4</string>
    <string name="palette_5">Palette 5</string>
    <string name="palette_6">Palette 6</string>
    <string name="disconnect">Disconnect</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Confirmation password</string>
    <string name="google_registration">Sign in with google</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_as_guest">Sign in as guest</string>
    <string name="password_forgotten">Forgot your password?</string>
    <string name="no_account">Don\'t have any account?</string>
    <string name="sign_up">Sign up</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="authenticate">Authenticate</string>
    <string name="reference_field_name_is_empty"> is empty</string>
    <string name="not_valid">Email  isn\'t valid</string>
    <string name="submit">Submit</string>
    <string name="email_sent">A confirmation email has been sent</string>
    <string name="email_sent_and_logout">Once you complete the email change, please sign in again using your new address</string>
    <string name="ok">OK</string>

    <string name="password_length_politics">Password must be longer then 7 or less then 4096 characters</string>
    <string name="password_characters_politics">Password must contain at least one uppercase letter, one number and one special character</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>

    <string name="email_login_error">Check the email address</string>
    <string name="password_login_error">The password must have at least 8 characters</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="invalid_user_error">E-mail  isn\'t valid</string>
    <string name="invalid_credentials_error">Credentials aren\'t valid</string>
    <string name="user_collision_error">This e-mail is already registered</string>
    <string name="weak_password_error">Password is weak</string>
    <string name="user_login_expired"> Sign in need to be performed again</string>
    <string name="network_error">Connection error. Please check your network and try again.</string>
    <string name="too_many_requests_error">Too many requests. Please try again later.</string>
    <string name="api_not_available_error">Service temporarily unavailable. Please try again later.</string>

    <string name="user_disconnection"> Account disconnected </string>
    <string name="guest_disconnection"> "Guest disconnected" </string>

    <string name="remote_username_correctly_updated"> Username updated successfully </string>
    <string name="remote_username_update_error"> Username update went wrong, try again</string>
    <string name="empty_username_error">Username can\'t be empty</string>
    <string name="remote_password_correctly_updated"> Password updated successfully </string>
    <string name="remote_email_correctly_updated"> Email updated successfully </string>
    <string name="remote_email_update_error"> Email update went wrong, try again</string>
    <string name="remote_profile_picture_correctly_updated"> Profile picture updated successfully </string>
    <string name="remote_profile_picture_update_error"> Profile picture update went wrong, try again</string>

    <string name="error_retrieving_news">There was an error retrieving the news</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="weather_image_content_description">An image that shows the current weather</string>
    <string name="weather_type">Weather Type</string>
    <string name="degrees_text">%1$.1f°</string>
    <string name="suggestions_text">Where to go based on the current weather</string>
    <string name="city_filter_hint">City</string>
    <string name="outdoors_switch_text">Outdoors</string>
    <string name="settings_button_content_description">Settings button</string>
    <string name="filter_button_content_description">Filter button</string>
    <string name="filters_toolbar_title">Filters</string>
    <string name="city_filter_label">City</string>
    <string name="city_filter_subtext">Choose a city for which the suggestions will be prioritized</string>
    <string name="city_filter_dropdown_menu_hint">Choose a city in our system…</string>
    <string name="ignore_weather_switch_label">Ignore weather when generating recommendations</string>
    <string name="recommendations_order_filter_label">Order by</string>
    <string name="recommendations_order_filter_subtext">Choose in which order the recommended locations will be sorted</string>
    <string name="recommendations_order_dropdown_menu_hint">Order recommendations by…</string>
    <string name="ask_location_permission_text">The app requires location permissions to advice locations based on the current weather</string>
    <string name="grant_location_permissions_button_text">Grant location permissions</string>
    <string name="checking_geo_localization_permissions">Checking geo-localization permissions…</string>
    <string name="intro_slide_title">Find the best share working places in your vicinity!</string>
    <string name="start_application_button_text">Start the application</string>
    <string name="geolocalization_fragment_title">This application requires geo-localization permissions!</string>
    <string name="geo_localization_permission_rationale">To provide suggestions based on the current weather, the application requires access to the position of your device. The GPS information gathered by the application will not be saved on our servers and will not be shared with any third-party subjects. Please grant geo-localization permission to the application by tapping the button below.</string>
    <string name="geo_localization_permission_denied_dialogue_title">Are you sure?</string>
    <string name="geo_localization_permission_denied_dialogue_message">You will still be able to utilize the app; however, the current weather in your location will not be used to provide location suggestions </string>
    <string name="geo_localization_permission_denied_dialogue_positive_button_text">I\'m sure</string>
    <string name="geo_localization_permission_denied_dialogue_negative_button_text">Cancel</string>

    <string name="deny_permission_request_button_text">Deny permission request</string>
    <string name="searchbar_hint">Search in your favourites…</string>
    <string name="no_favourites">No favourite workPlaces yet</string>
    <string name="workPlaceName">Name</string>
    <string name="workPlaceCity">City</string>
    <string name="workPlaceAddress">Address</string>
    <string name="todo">TODO</string>
    <string name="content">content</string>
    <string name="logo_image">logo_image</string>
    <string name="undo">Undo</string>
    <string name="or">OR</string>

    <string name="add_location">Add location</string>
    <string name="favorite">Save location</string>
    <string name="place_name">Name of the place</string>
    <string name="place_address">Address</string>
    <string name="offline_text_view_message">You\'re offline!\nSome feature are currently disabled and some data may not be up to date</string>
    <string name="online_text_view_message">You\'re back online</string>
    <string name="load_workplaces_failed">Failed to load the workplaces…</string>
    <string name="location_details_incomplete">Location details incomplete.</string>
    <string name="autocomplete_error">"Autocomplete Error: "</string>
    <string name="favorite_added">Favorite added: %1$s</string>
    <string name="favorite_removed">Favorite removed: %1$s</string>
    <string name="confirm_new_location">Confirm new location</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="no_matches_for">No matches for</string>

    <string name="workplace_saved_successfully">%1$s saved successfully!</string>
    <string name = "error_message_toast">Something went wrong: %1$s</string>
    <string name="workplace_deleted_successfully">%1$s deleted successfully!</string>
    <string name="workplace_retrieve_error_message">Error loading workplaces</string>
    <string name="places_sdk_not_initialized">Places SDK was not initialized correctly!</string>
    <string name="geolocalization_permission_request_canceled_failed">Geolocalization permission request cancelled or failed!</string>
    <string name="failed_to_fetch_saved">There was an error fetching the saved workplaces!</string>
    <string name="guests_cannot_save_workplaces">Guest cannot save workplaces!</string>
    <string name="logged_as_guest">Logged as guest!</string>
    <string name="the_place_is_outdoors">The place is outdoors</string>
</resources>