<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:hint="@string/place_name"
        android:textColor="@color/md_theme_tertiary_highContrast"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/input_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/place_address"
        android:textColor="@color/md_theme_tertiary_highContrast"
        android:importantForAutofill="no"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/input_outside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/md_theme_onSurfaceVariant_highContrast"
        android:text="@string/the_place_is_outdoors" />
</LinearLayout>
