<com.google.android.material.card.MaterialCardView android:id="@+id/card_workplace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/materialCardViewOutlinedStyle"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/card_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!-- Media -->

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/content"
                    />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favouriteButton"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/todo"
                android:button="@drawable/saved_selector"
                app:buttonIconTint="@null" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/workPlaceName"
                        android:layout_weight="1"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/workPlaceAddress"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary"
                    />
            </com.facebook.shimmer.ShimmerFrameLayout>


        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>



