<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register"
    tools:context=".ui.main.fragments.LoggedProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_auth_button_view"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="0dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="@string/sign_up"
                android:enabled="false"
                android:textColor="@color/md_theme_inverseSurface"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button"
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:padding="0dp"
                android:backgroundTint="@color/md_theme_primary"
                android:text="@string/sign_in"
                android:textColor="@color/md_theme_onPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/registration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:background="@drawable/rounded_view"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_field_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:hint="@string/email"
                    app:hintTextColor="@color/error_text_layout_color_selector"
                    app:errorTextColor="@color/md_theme_error">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_field_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/username">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_field_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_field_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/regular_text_size"
                    android:backgroundTint="@color/md_theme_tertiary"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/md_theme_inverseSurface" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:textColor="@color/md_theme_inverseSurface"
                        android:paddingHorizontal="@dimen/activity_horizontal_margin" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/md_theme_inverseSurface" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/google_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/google_registration"
                    android:textSize="@dimen/regular_text_size"
                    android:textColor="@color/md_theme_onPrimaryContainer"
                    android:backgroundTint="@color/md_theme_onPrimary"
                    app:iconTint="@color/transparent"
                    app:iconTintMode="src_atop"
                    app:icon="@mipmap/google_logo"
                    app:iconSize="35dp"
                    app:iconGravity="textStart"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_as_guest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/sign_as_guest"
                    android:textSize="@dimen/regular_text_size"
                    android:backgroundTint="@color/md_theme_errorContainer_highContrast"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>